combining index.html and play.html

--- a/des157/studio3/index.html
+++ b/des157/studio3/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-    <div id="container">
-        <div id="title">
+    <div id="container_index">
+        <div id="title_index">
             <img src="./images/gameOfPokemon.png">
         </div>
-        <div id="lower_half">
-            <div id="game_rules">
+        <div id="lower_half_index">
+            <div id="game_rules_index">
                 <h2>Game Rules:</h2>
                 <h3>
                     <br>
@@ -35,8 +35,8 @@
                 </h3>
             </div>
 
-            <div id="menu">
-                <div id="menu_box">
+            <div id="menu_index">
+                <div id="menu_box_index">
                     <p>Player 1</p>
                     <input>
                     <p>Player 2</p>
