--- a/des157/index.html
+++ b/des157/index.html
@@ -42,7 +42,7 @@
                 <h2>Research and Development</h2>
                 <ul>
                     <li><a href="./final/brief.html">Project Brief</a></li>
-                    <li><a href="">Digital Comp</a></li>
+                    <li><a href="./final/images/comp.png">Digital Comp</a></li>
                     <li><a href="">Refined Comp</a></li>
                     <li><a href="">Prototype 1</a></li>
                     <li><a href="">User Test</a></li>
