--- a/des157/index.html
+++ b/des157/index.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="./studio1/index.html">Mad Libs 2.0</a></li>
                     <li><a href="./studio2/index.html">Every Picture</a></li>
-                    <li><a href="">Game On!</a></li>
+                    <li><a href="./studio3/play.html">Game On!</a></li>
                 </ul>
                 <h2>Experiments</h2>
                 <ul>
