temporarily hide player input

--- a/des157/studio3/play.html
+++ b/des157/studio3/play.html
@@ -36,7 +36,7 @@
             </div>
 
             <div id="menu_index">
-                <div id="menu_box_index">
+                <div id="menu_box_index" class="invisible">
                     <p>Player 1</p>
                     <input>
                     <p>Player 2</p>
