update image res

--- a/des157/final/brief.html
+++ b/des157/final/brief.html
@@ -26,7 +26,7 @@
     <div id="comparison">
         <div>
             <h2>Comparison Project 1</h2>
-            <img src="./images/Screen Shot 2021-05-20 at 8.27.38 AM.png">
+            <img src="./images/screenshot1.png">
             <figcaption><a href="https://blockrage.pgs-soft.com/">https://blockrage.pgs-soft.com/</a></figcaption>
             <p> 
                 The website I used for Comparison 1 is the site for the game blockrage.
@@ -45,7 +45,7 @@
         </div>
         <div>
             <h2>Comparison Project 2</h2>
-            <img src="images/Screen Shot 2021-05-20 at 8.38.04 AM.png">
+            <img src="images/screenshot2.png">
             <figcaption><a href="https://www.chocapic-nutri-game.fr/">https://www.chocapic-nutri-game.fr/</a></figcaption>
             <p>
                 The website that I used for Comparison 2 is the site for the game chocapic.
