--- a/des157/studio3/play.html
+++ b/des157/studio3/play.html
@@ -145,7 +145,7 @@
     <footer id="footer">
         <nav>
             <a id="email" href="mailto:rlozano@ucdavis.edu">Email</a>
-            <a id="html" href="https://validator.w3.org/check?uri=https://robertolozano.github.io/des157/studio2">Valid HTML 5</a>
+            <a id="html" href="https://validator.w3.org/check?uri=https://robertolozano.github.io/des157/studio3/play.html">Valid HTML 5</a>
             <a id="css" href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
         </nav>
     </footer>
