--- a/des157/studio3/play.html
+++ b/des157/studio3/play.html
@@ -147,6 +147,7 @@
             <a id="email" href="mailto:rlozano@ucdavis.edu">Email</a>
             <a id="html" href="https://validator.w3.org/check?uri=https://robertolozano.github.io/des157/studio3/play.html">Valid HTML 5</a>
             <a id="css" href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+            <a id="sources" href="./sources.html">Sources</a>
         </nav>
     </footer>
 
