update picture of me

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="me_section_right">
-      <img id="parkBenchPic" src="images/goodlooking.jpeg" alt="pictureOfRoberto">
+      <img id="parkBenchPic" src="images/gradpic.jpg" alt="pictureOfRoberto">
     </div>
   </div>
 
