--- a/des157/final/proto/index.html
+++ b/des157/final/proto/index.html
@@ -16,6 +16,7 @@
             <img id="sprite_img" src="images/sprite1.png"></img>
             <img id="sprite_enemy_1" src="images/enemy1.png"></img>
         </div>
+        <p id="instructions"> Move with WASD Keys and Use "Enter" Key to interact with enemies</p>
     </div>
 
     <div id="container_index" class="invisible">
@@ -121,7 +122,7 @@
 
         <div id="menu">
             <div id="game_text">
-                <!-- <div id="dice_area">
+                <div id="dice_area">
                     <div id="dice_images">
                         <img alt="dice1blue" id="dice_1_img" src="images/dice1blue.png">
                         <img alt="dice2blue" id="dice_2_img" src="images/dice2blue.png">
@@ -134,7 +135,7 @@
                     <div id="dice_roll">
                         <img alt="dice1green" id="dice_roll_img" src="images/dice1green.png">
                     </div>
-                </div> -->
+                </div>
                 <div id="game_description_container">
                     <p id="game_description"></p>
                 </div>
