--- a/des157/index.html
+++ b/des157/index.html
@@ -52,7 +52,7 @@
             <div>
                 <h2>Final</h2>
                 <ul>
-                    <li><a href="">Final Project</a></li>
+                    <li><a href="./final/final/index.html">Final Project</a></li>
                 </ul>
             </div>  
         </main>
