--- a/des157/final/brief.html
+++ b/des157/final/brief.html
@@ -99,5 +99,13 @@
             </p>
         </div>
     </div>
+
+    <footer>
+        <nav>
+            <a id="email" href="mailto:rlozano@ucdavis.edu">Email</a>
+            <a id="html" href="https://validator.w3.org/check?uri=https://robertolozano.github.io/des157/final/brief.html">Valid HTML 5</a>
+            <a id="css" href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+        </nav>
+    </footer>
 </body>
 </html>
