add alt to studio 2 img

--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -26,7 +26,7 @@
                 <div id="topleft"></div>
                 <div id="bottomright"></div>
                 <div id="center"></div>
-                <img id="sneakerIMG" class="start" src="./images/sneaker0.png">
+                <img alt="sneakerIMG" id="sneakerIMG" class="start" src="./images/sneaker0.png">
             </div>
             <div id="overlay_shoebox">
                 <div id="overlay_shoebox_lid"></div>
