--- a/des157/final/brief.html
+++ b/des157/final/brief.html
@@ -14,7 +14,7 @@
     <div id="summary">
         <h2>Project Summary</h2>
         <p>
-            I will be updating my Studio 3 Project. I will be redesigning Interaction
+            I will be updating my Studio 3 Project. I will be redesigning my studio 3 into
             a game that follows my journey through college and the struggles that I
             encountered along the way in a sillier Pokemon style battle game. I decided
             on this topic as I am about to graduate and move on from my life as an undergrad,
@@ -49,7 +49,7 @@
             <figcaption><a href="https://www.chocapic-nutri-game.fr/">https://www.chocapic-nutri-game.fr/</a></figcaption>
             <p>
                 The website that I used for Comparison 2 is the site for the game chocapic.
-                The site, much like comparison also uses this combination of real world elements
+                The site, much like comparison 1 also uses this combination of real world elements
                 by having a gameboy and an inner display where the game actually takes place.
                 <br><br>
                 This game also follows the retro/pixelated style and uses lots of great animations
