--- a/des157/final/brief.html
+++ b/des157/final/brief.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="brief.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <title>Project Brief</title>
 </head>
@@ -26,9 +26,11 @@
     <div id="comparison">
         <div>
             <h2>Comparison Project 1</h2>
-            <img src="./images/screenshot1.png">
-            <figcaption><a href="https://blockrage.pgs-soft.com/">https://blockrage.pgs-soft.com/</a></figcaption>
-            <p> 
+            <figure>
+                <img alt="image" src="./images/screenshot1.png">
+                <figcaption><a href="https://blockrage.pgs-soft.com/">https://blockrage.pgs-soft.com/</a></figcaption>
+            </figure>
+             <p> 
                 The website I used for Comparison 1 is the site for the game blockrage.
                 The site uses a great combination of real world elements such as the 
                 retro computer, the desk, and the books, which contrast greatly with the
@@ -45,8 +47,10 @@
         </div>
         <div>
             <h2>Comparison Project 2</h2>
-            <img src="images/screenshot2.png">
-            <figcaption><a href="https://www.chocapic-nutri-game.fr/">https://www.chocapic-nutri-game.fr/</a></figcaption>
+            <figure>
+                <img alt="image2" src="images/screenshot2.png">
+                <figcaption><a href="https://www.chocapic-nutri-game.fr/">https://www.chocapic-nutri-game.fr/</a></figcaption>
+            </figure>
             <p>
                 The website that I used for Comparison 2 is the site for the game chocapic.
                 The site, much like comparison 1 also uses this combination of real world elements
