adding github links

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="Roberto Lozano Jr's Personal Website">   
-
     <link type="text/css" rel="stylesheet" href="css/reset.css">
     <link type="text/css" rel="stylesheet" href="css/index.css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://cdn.rawgit.com/balzss/luxbar/ae5835e2/build/luxbar.min.css">
 
 </head>
@@ -51,7 +49,7 @@
     <p id="what_ive_been_up_to_title">What I've been up to</p>
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic" src="images/hungr.png" alt="projectPicture">
+        <img id="project_pic1" src="images/hungr.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">Hungr</p>
@@ -59,14 +57,37 @@
           to decide what to eat. Similar to the tinder style of swiping,
           users will swipe on which restaurants they like to decide on
           a winner.</p>
-        <p class="tech_stack">•HTML  •CSS  •Javascript  •Node  •Yelp API  •Swiper API  •Web Sockets
-        •Firebase Authentication   •Firebase Database</p>
+
+        <ul class="tech_stack">
+          <li>•HTML</li>
+          <li>•CSS</li>
+          <li>•Javascript</li>
+          <li>•Node</li>
+          <li>•Yelp API</li>
+          <li>•Socket.IO</li>
+          <li>•Firebase Authentication</li>
+          <li>•Firebase Database</li>
+        </ul>  
+
+
+        <div class="button_section">
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://github.com/robertolozano/RestaurantTinder';">Github</button>
+          </div>
+
+          <div class="button-wrapper">
+            <button class="button-project-link">Live Site</button>
+          </div>
+        </div>
+
+
+
         </div>
     </div>
 
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic" src="images/LStore.png" alt="projectPicture">
+        <img id="project_pic2" src="images/LStore.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">QueCC L-Store Database</p>
@@ -75,30 +96,80 @@
           concurrency control which allows for a contentionless design
           when operating transactions.</p>
           
-        <p class="tech_stack">•Python</p>
+        <ul class="tech_stack">
+          <li>•Python</li>
+        </ul>  
+
+        <div class="button_section">
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://github.com/p3terlo/lstore_db';">Github</button>
+          </div>
+        </div>
+
         </div>
     </div>
+
+
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic" src="images/trivio.png" alt="projectPicture">
+        <img id="project_pic3" src="images/sprite3.png" alt="projectPicture">
+      </div>
+      <div class="project_title_and_desc">
+        <p class="project_title">Design Course - Final Project</p>
+        <p class="project_description">A interactive website, I created as a final project
+          for my upper division Design Course, which shows off a variety of interactive elements.
+          The project is set up as a Pokemon like game that follows my journey through college.
+        </p>
+
+        <ul class="tech_stack">
+          <li>•HTML</li>
+          <li>•CSS</li>
+          <li>•Javascript</li>
+        </ul>  
+
+        <div class="button_section">
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://github.com/robertolozano/robertolozano.github.io/tree/DES157A/des157/final/final';">Github</button>
+          </div>
+
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://robertolozano.github.io/des157/final/final/index.html';">Live Site</button>
+          </div>
+        </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="project">
+      <div id="project_pic_div">
+        <img id="project_pic4" src="images/trivio.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">Triv-io App</p>
         <p class="project_description">An app for quickly setting up trivia games and adding friends
           across the world to play against in fun, competitive matches.</p>
-        <p class="tech_stack">•Swift  •Firebase Authentication  •Firebase Database</p>
+
+        <ul class="tech_stack">
+          <li>•Swift</li>
+          <li>•Firebase Authentication</li>
+          <li>•Firebase Database</li>
+        </ul>  
+
+        <div class="button_section">
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://github.com/ECS189E/project-w21-triv-io';">Github</button>
+          </div>
+        </div>
+
         </div>
     </div>
-    <div>
-
-    </div>
+  
   </div>
-
 
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="javascript/script.js"></script>
-
-
 </body>
 
 </html>
