link live site to restaurant tinder project

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
 
           <div class="button-wrapper">
-            <button class="button-project-link">Live Site</button>
+            <button class="button-project-link" onclick="location.href='https://restaurant-tinder-app.herokuapp.com/';">Live Site</button>
           </div>
         </div>
 
