adding github battle

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <div id="what_ive_been_up_to">
     <p id="what_ive_been_up_to_title">What I've been up to</p>
+    
     <div class="project">
       <div id="project_pic_div">
         <img id="project_pic1" src="images/hungr.png" alt="projectPicture">
@@ -69,7 +70,6 @@
           <li>•Firebase Database</li>
         </ul>  
 
-
         <div class="button_section">
           <div class="button-wrapper">
             <button class="button-project-link" onclick="location.href='https://github.com/robertolozano/RestaurantTinder';">Github</button>
@@ -79,10 +79,39 @@
             <button class="button-project-link" onclick="location.href='https://restaurant-tinder-app.herokuapp.com/';">Live Site</button>
           </div>
         </div>
+      </div>
+    </div>
 
+    <div class="project">
+      <div id="project_pic_div">
+        <img id="project_pic5" src="images/GitHub-Mark-120px-plus.png" alt="projectPicture">
+      </div>
+      <div class="project_title_and_desc">
+        <p class="project_title">Github Battle (React JS)</p>
+        <p class="project_description">Project built in React 
+          that fetches Github data to display popular Repos and
+          compares Github accounts against one another.
+        </p>
 
+        <ul class="tech_stack">
+          <li>•React JS</li>
+          <li>•React Router</li>
+          <li>•Github API</li>
+          <li>•CSS</li>
+          <li>•Javascript</li>
+          <li>•Webpack</li>
+        </ul>  
 
+        <div class="button_section">
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://github.com/robertolozano/GithubBattle';">Github</button>
+          </div>
+
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://elastic-easley-6422df.netlify.app/';">Live Site</button>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="project">
