updating octocat picture

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic5" src="images/GitHub-Mark-120px-plus.png" alt="projectPicture">
+        <img id="project_pic5" src="images/github_cat.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">Github Battle (React JS)</p>
