adding jr to title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Roberto Lozano</title>
+    <title>Roberto Lozano Jr</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="Roberto Lozano Jr's Personal Website">   
