--- a/index.html
+++ b/index.html
@@ -84,6 +84,35 @@
 
     <div class="project">
       <div id="project_pic_div">
+        <img id="project_pic1" src="images/Group 1 (4).png" alt="projectPicture">
+      </div>
+      <div class="project_title_and_desc">
+        <p class="project_title">Wavify</p>
+        <p class="project_description">React app utilizing the Spotify API to retrieve tracks and extract the audio analysis data in order to add a music visualizer using d3 </p>
+
+        <ul class="tech_stack">
+          <li>•React</li>
+          <li>•React Router</li>
+          <li>•Javascript</li>
+          <li>•CSS</li>
+          <li>•Spotify API</li>
+          <li>•d3</li>
+        </ul>  
+
+        <div class="button_section">
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://github.com/robertolozano/SpotifyVisualizer';">Github</button>
+          </div>
+
+          <div class="button-wrapper">
+            <button class="button-project-link" onclick="location.href='https://wavify.netlify.app/';">Live Site</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="project">
+      <div id="project_pic_div">
         <img id="project_pic5" src="images/github_cat.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
